# pygalmesh

./: .gitignore  CMakeLists.txt  setup.py
cmake/recipes/: pybind11.cmake
pygalmesh/: main.py
src/: CMakeLists.txt  domain.hpp  generate.cpp  generate.hpp  generate_from_inr.cpp  generate_from_off.cpp  generate_periodic.cpp  generate_periodic.hpp  polygon2d.hpp  primitives.hpp  pybind11.cpp
